--- a/template.html
+++ b/template.html
@@ -10,8 +10,7 @@
 -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-<!-- Changed post title to display before page title. -->    <title>{block:PostSummary}{PostSummary}&mdash;{/block:PostSummary}{Title}</title>
+    <title>{Title}{block:PostSummary} : {PostSummary}{/block:PostSummary}</title>
 
     <meta name="color:Background" content="#fff"/>
     <meta name="color:Text" content="#444"/>
@@ -45,8 +44,7 @@
            line-height: inherit; vertical-align: baseline; background: transparent;}
       html {font-size:100.01%;}
       caption, cite, code, dfn, th, var {font-style: normal; font-weight: normal;}
-<!-- Changed weight for headings to bold. -->
-      h1, h2, h3, h4, h5, h6 {font-weight: bold;}
+      h1, h2, h3, h4, h5, h6 {font-weight: normal;}
       blockquote, q {quotes: none;}
       blockquote:before, blockquote:after, q:before, q:after {content: '';}
       :focus {outline: 0;}
@@ -110,7 +108,6 @@
       .text-post h3 {margin-bottom: 9pt;}
 
       .link-post {position: relative; top: -2pt;}
-<!--Changed heading for link posts to italics.-->      
       .link-post h3 {display: inline; padding-right:9pt;}
       .link-post a {color: {color:Text};}
       .link-post a:hover {color: {color:Secondary};}
@@ -159,16 +156,6 @@
 
       {CustomCSS}
     </style>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-20772003-1', 'rmward.com');
-      ga('send', 'pageview');
-
-    </script>    
   </head>
   <body>
     <div id="body">
@@ -218,9 +205,8 @@
     <h2 class="permalink">
 
         {block:NewDayDate}
-<!-- Change date display to traditional format and remove leading zeroes. -->
           <a title="{NoteCountWithLabel}"
-            href="{Permalink}">{MonthNumber}/{DayOfMonth}/{Year}</a>
+            href="{Permalink}">{Year}-{MonthNumberWithZero}-{DayOfMonthWithZero}</a>
         {/block:NewDayDate}
 
         {block:IfNotDisqusShortName}
@@ -256,7 +242,7 @@
 
     {block:Link}
     <div class="post-body link-post">
-      <h3><a class="link" href="{URL}" style="font-style: italic">&rarr; {Name}</a></h3>
+      <h3><a class="link" href="{URL}">{Name}</a></h3>
 
       {block:Description}
       {Description}
@@ -330,10 +316,7 @@
     </p>
     {/block:ContentSource}
 
-<!-- Add infinity symbol with permalink. -->
     {block:Permalink}
-      <a href="{Permalink}">&infin;</a>
-
     {block:IfDisqusShortname}
     <div id="disqus_thread"></div>
     <script type="text/javascript" src="http://disqus.com/forums/{text:Disqus Shortname}/embed.js"></script>
