--- a/template.html
+++ b/template.html
@@ -10,7 +10,9 @@
 -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{Title}{block:PostSummary} : {PostSummary}{/block:PostSummary}</title>
+
+	<!-- Changed post title to display before page title. -->
+	<title>{block:PostSummary}{PostSummary}&mdash;{/block:PostSummary}{Title}</title>
 
     <meta name="color:Background" content="#fff"/>
     <meta name="color:Text" content="#444"/>
