- Changed heading font weight.

--- a/template.html
+++ b/template.html
@@ -46,8 +46,10 @@
            line-height: inherit; vertical-align: baseline; background: transparent;}
       html {font-size:100.01%;}
       caption, cite, code, dfn, th, var {font-style: normal; font-weight: normal;}
-      h1, h2, h3, h4, h5, h6 {font-weight: normal;}
-      blockquote, q {quotes: none;}
+
+	  <!-- Changed weight for headings to bold. -->
+      h1, h2, h3, h4, h5, h6 {font-weight: bold;}
+
       blockquote:before, blockquote:after, q:before, q:after {content: '';}
       :focus {outline: 0;}
       ins {text-decoration: underline;}
