--- a/template.html
+++ b/template.html
@@ -112,6 +112,7 @@
       .text-post h3 {margin-bottom: 9pt;}
 
       .link-post {position: relative; top: -2pt;}
+	  <!--To-do: heading for link posts to italics.-->      
       .link-post h3 {display: inline; padding-right:9pt;}
       .link-post a {color: {color:Text};}
       .link-post a:hover {color: {color:Secondary};}
@@ -160,6 +161,16 @@
 
       {CustomCSS}
     </style>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-20772003-1', 'rmward.com');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
     <div id="body">
