- Added permalink code.

--- a/template.html
+++ b/template.html
@@ -335,6 +335,9 @@
     {/block:ContentSource}
 
     {block:Permalink}
+	<!-- Add infinity symbol with permalink. -->
+	<a href="{Permalink}">&infin; Permalink</a>
+
     {block:IfDisqusShortname}
     <div id="disqus_thread"></div>
     <script type="text/javascript" src="http://disqus.com/forums/{text:Disqus Shortname}/embed.js"></script>
