- Added some comments.

--- a/template.html
+++ b/template.html
@@ -336,6 +336,7 @@
 
     {block:Permalink}
 	<!-- Add infinity symbol with permalink. -->
+	<!-- To-do: Figure out color issue here. -->
 	<a href="{Permalink}">&infin; Permalink</a>
 
     {block:IfDisqusShortname}
